Midterms/Mid-4002/q1/accept.g4
grammar accept;

compilationUnit
    : ('F1:' a ',' b ',' c) | ('F2:' d ',' e ',' f)  EOF
    ;

a
    : g | g g | h g g | '7' l l
    ;

b
    : g | g g | i g g | '4' j j
    ;

c
    : g | g g | j g g | '3' m n
    ;

d
    : g | g g | '0' g g | '1' j i
    ;

e
    : g | g g | i g g | '4' h k
    ;

f
    : g | g g | k g g | '200'
    ;

g:
    '0' | '1' | '2' | '3' | '4' | '5' | '6' | '7' | '8' | '9'
    ;

h:
    '0' | '1' | '2' | '3' | '4' | '5' | '6'
    ;

i:
    '0' | '1' | '2' | '3'
    ;

j:
    '0' | '1' | '2'
    ;

k:
    '0' | '1'
    ;

l:
    '0' | '1' | '2' | '3' | '4' | '5' | '6' | '7' | '8'
    ;

m:
    '0' | '1' | '2' | '3' | '4'
    ;

n:
    '0' | '1' | '2' | '3' | '4' | '5'
    ;
